# pdfparanoia

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pdfparanoia/: __init__.py  cli.py  core.py  eraser.py  parser.py  plugin.py
pdfparanoia/plugins/: __init__.py  aip.py  ieee.py  jstor.py  rsc.py  sciencemagazine.py
tests/: test_aip.py  test_eraser.py  test_ieee.py  test_jstor.py  test_rsc.py
