[project]
name = "pdfparanoia"
version = "1.0-dev"
description = "pdf watermark remover library for academic papers"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD" }
authors = [
    { name = "Bryan Bishop", email = "kanzure@gmail.com" },
]
maintainers = [
    { name = "Bryan Bishop", email = "kanzure@gmail.com" },
]
dependencies = [
    "pdfminer.six==20250506"
]
urls = { "Homepage" = "https://github.com/kanzure/pdfparanoia" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
]

[project.scripts]
"pdfparanoia" = "pdfparanoia.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
